added simple html and trying to work with css grid and flexbox

--- a/index.html
+++ b/index.html
@@ -5,8 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"></link>
+    <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <div class="root-top">
+        <p>TITLE</p>
+    </div>
+
+    <div class="root-mid">
+        <div id="sign-up">
+            <div> SIGN UP:</div>
+            <form>
+                <input type="text" name="username">
+                <input type="submit" value="Create User"><br>
+            </form>
+        </div>
+        <div id="or">
+            <p>OR</p>
+        </div>
+        <div id="login">
+            <form>                
+                LOGIN: <br>
+                <select>
+                    <option value="fonzie">Fonzie</option>
+                    <option value="shawn">Shawn</optino>
+                </select>
+                <input type="submit" value="Login"><br>
+            </form>
+        </div>
+    </div>
+
+    <div class="root-bot">
+
+    </div>
 </body>
 </html>
