Added some css grid stuff as well as started making the index.js

--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
     <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-    <div class="root-top">
-        <p>TITLE</p>
-    </div>
+    <script src="index.js"></script>
+
 
     <div class="root-mid">
         <div id="sign-up">
-            <div> SIGN UP:</div>
             <form>
+                SIGN UP: <br>
                 <input type="text" name="username">
                 <input type="submit" value="Create User"><br>
             </form>
@@ -35,10 +33,6 @@
                 <input type="submit" value="Login"><br>
             </form>
         </div>
-    </div>
-
-    <div class="root-bot">
-
     </div>
 </body>
 </html>
