accidentally added other files, so removed those, and also updated the CSS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"></link>
         <link rel="stylesheet" href="styles.css"></link>
         <script src="index.js"></script>
+        <!-- <audio src = 'https://mod3-project.s3-us-west-2.amazonaws.com/Premium+retro+swing+music+for+Cooking+Shows+and+Videos+-+Food+Show+Kochshow+Music.mp3'autoplay> -->
+            
+        <!-- </audio> -->
     </head>
     <body>
         
